--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MartketPlace</string>
+    <string name="fashion">Fashion</string>
+    <string name="restaurants">Restaurants</string>
+    <string name="electronics">Electronics</string>
+
 </resources>
