Added prices to fashion activity page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="fashion">Fashion</string>
     <string name="restaurants">Restaurants</string>
     <string name="electronics">Electronics</string>
-
+    <string name="suits">Ksh 6000</string>
 </resources>
