--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="restaurants">Restaurants</string>
     <string name="electronics">Electronics</string>
     <string name="suits">Ksh 6000</string>
+    <string name="Buy">buy</string>
 </resources>
